--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
             </menu>
         </nav>
 
-        <h1>Hm Building.cz s.r.o</h1>
+        <h1 class="index__h1">Hm Building.cz s.r.o</h1>
         <p>Liberecká stavební společnost</p>
     </header>
 
     <main>
         <section id="sluzby">
         <article class="article__max__width">
-            <p class="velky_a_tucny">Využíjte škálu našich <span>služeb</span></p>
-            <p>Ačkoliv provádíme především průmyslové stavby, není pro nás problém postavit Vám rodinný domek na klíč, nebo jen hrubou stavbu. Nejsou nám cizí ani rekonstrukce budov a jejich údržba a to včetně okolních ploch.</p>
+            <p class="velky_a_tucny center__text__on__pc">Využíjte škálu našich <span class="span__orange">služeb</span></p>
+            <p class="center__text__on__pc">Ačkoliv provádíme především průmyslové stavby, není pro nás problém postavit Vám rodinný domek na klíč, nebo jen hrubou stavbu. Nejsou nám cizí ani rekonstrukce budov a jejich údržba a to včetně okolních ploch.</p>
         </article>
 
 
@@ -116,8 +116,8 @@
         <section class="section__reference">
 
             <article class="article__max__width">
-                <p class="velky_a_tucny">Rádi vám ukážeme naše reference</p>
-                <p>Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
+                <p class="velky_a_tucny center__text__on__pc">Rádi vám ukážeme naše reference</p>
+                <p class="center__text__on__pc">Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
             </article>
 
             <div class="obrazky__reference">
@@ -151,7 +151,7 @@
 
     </main>
     <footer>
-        <p>Plácneme si na váš projekt</p>
+        <p class="velky_a_tucny">Plácneme si na váš projekt</p>
         <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
         <button class="button__footer">Nezávazně poptat</button>
     </footer>
