--- a/kontakt.html
+++ b/kontakt.html
@@ -37,7 +37,7 @@
 
 <main>
     <section>
-    <h1>Kontaktujte nás</h1>
+        <h1 class="center__text__on__pc nadpis__h1__other__page">Kontakt</h1>
     <div class="kontakt__icons">
 
     </div>
