--- a/o_nas.html
+++ b/o_nas.html
@@ -37,8 +37,8 @@
 <main>
     <section>
     <article>
-    <h1>O nás</h1>
-    <p>polečnost HM Building.cz s.r.o. nabízí své služby ve stavebnictví od roku 2015, a to převážně po Libereckém kraji. </p>
+        <h1 class="center__text__on__pc nadpis__h1__other__page">O nás</h1>
+    <p>Společnost HM Building.cz s.r.o. nabízí své služby ve stavebnictví od roku 2015, a to převážně po Libereckém kraji. </p>
     <p> V oboru pozemního stavitelství provádíme stavbu a rekonstrukci:</p>
     <ul class="odrazky__oranzove">
         <li>Průmyslových staveb</li>
