--- a/reference.html
+++ b/reference.html
@@ -41,7 +41,7 @@
 <section class="section__reference">
 
     <article class="article__max__width">
-        <p class="velky_a_tucny">Rádi vám ukážeme naše reference</p>
+        <h1 class="center__text__on__pc nadpis__h1__other__page">Reference</h1>
         <p>Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
     </article>
 
