--- a/reference_hasicska_zbrojnice.html
+++ b/reference_hasicska_zbrojnice.html
@@ -34,8 +34,8 @@
 
 </header>
 <figure class="article__title">
-    <h1>Hasičská zbrojnice</h1>
-    <p>Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
+    <h1 class="center__text__on__pc nadpis__h1__other__page">Hasičská zbrojnice</h1>
+    <p class="center__text__on__pc">Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
 </figure>
     <section class="article--reference">
         <img src="Media/reference/hasicska-zbrojnice/reference-hz-01.jpeg">
