--- a/reference_samoobluzna_prace.html
+++ b/reference_samoobluzna_prace.html
@@ -33,8 +33,8 @@
     </nav>
 </header>
 <figure class="article__title">
-    <h1>Samoobslužná prádelná</h1>
-    <p>Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
+    <h1 class="center__text__on__pc nadpis__h1__other__page">Samoobslužná prádelna</h1>
+    <p class="center__text__on__pc">Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
 </figure>
 <section class="article--reference">
     <img src="Media/reference/pradelna/reference-pradelna-01.jpeg">
