--- a/reference_venkovsni_plochy.html
+++ b/reference_venkovsni_plochy.html
@@ -25,15 +25,15 @@
 
         <menu>
             <li><a href="index.html"“>Domů</a></li>
-            <li<li class="li__active"><a class="a__active" href="reference.html">Reference </a></li>
+            <li class="li__active"><a class="a__active" href="reference.html">Reference </a></li>
             <li><a href="o_nas.html">O nás</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </menu>
     </nav>
 </header>
 <figure class="article__title">
-    <h1>Venkovní plochy restor</h1>
-    <p>Provedení venkovních ploch Restyl./p>
+    <h1 class="center__text__on__pc nadpis__h1__other__page">Venkovní plochy Restyl</h1>
+    <p class="center__text__on__pc">Provedení venkovních ploch Restyl</p>
 </figure>
 <section class="article--reference">
     <img src="Media/reference/plochy-restyl/reference-restyl-01.jpeg">
