--- a/kontakt.html
+++ b/kontakt.html
@@ -24,8 +24,8 @@
         </label>
 
         <menu>
-            <li><a href="index.html"“>Domů</a></li>
-            <li><a href=#sluzby>Služby</a></li>
+            <li><a href="index.html">Domů</a></li>
+            <li><a href="index.html">Služby</a></li>
             <li><a href="reference.html">Reference </a></li>
             <li><a href="o_nas.html">O nás</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
@@ -38,11 +38,15 @@
 <main>
     <section>
         <h1 class="center__text__on__pc nadpis__h1__other__page">Kontakt</h1>
-    <div class="kontakt__icons">
-
-    </div>
     <p>Zavolejte anebo nám napište... kvalitní komunikace je jeden z pilířů, na kterém stavíme.</p>
+        <div class="contact__icons">
+            <a href="tel:+420775550564" class="contacts__description"><span class="icon-dot icon-dot--phone"></span>+420 775 550 564</a>
+            <a href="mailto:stavby@hm-building.cz" class="contacts__description"><span class="icon-dot icon-dot--mail"></span>stavby@hm-building.cz</a>
+            <a href="https://en.mapy.cz/s/hacahelupa" class="contacts__description"><span class="icon-dot icon-dot--position"></span>Křižanská 12, Liberec XXII-Horní Suchá</a>
+        </div>
+    <div class="map">
     <img src="Media/mapa.jpg">
+    </div>
     <form>
         <p>Nezávazná poptávka služeb</p>
         <p>Plácneme si pro Váš projekt? Nezávazně nás kontaktujte a domluvme vše potřebné.
@@ -60,9 +64,7 @@
             <option value="Kryčfalušij">Hanička Zagorova</option>
         </select><br>
         <textarea name="message" rows="10" cols="30">Preferuji brunety oproti blondýnám</textarea>
-        <buuton>
-
-        </buuton>
+        <input class="button" type="submit" value="Odeslat nezávaznou poptávku">
     </form>
     </section>
 </main>
