--- a/o_nas.html
+++ b/o_nas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <title>stranka</title>
@@ -24,8 +24,8 @@
         </label>
 
         <menu>
-            <li><a href="index.html"“>Domů</a></li>
-            <li><a href=#sluzby>Služby</a></li>
+            <li><a href="index.html">Domů</a></li>
+            <li><a href="index.html">Služby</a></li>
             <li><a href="reference.html">Reference </a></li>
             <li class="li__active"><a class="a__active" href="o_nas.html">O nás</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
