Extremismus je obrovský problém

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Klasicický obchod s nemovitostmi</title>
     <meta charset="UTF-8">
     <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
-    <meta name="destription" content="Stránka, u které budete totálně rožhavení z těchto nemovitostí">
+    <meta name="destription" content="Stránka, u které budete totálně rožhavení z nemovitostí, které vám uděláme">
     <meta name="author" content="Jan Sebastián Kostlán">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
