--- a/kontakt.html
+++ b/kontakt.html
@@ -36,9 +36,9 @@
 </header>
 
 <main>
-    <section>
         <h1 class="center__text__on__pc nadpis__h1__other__page">Kontakt</h1>
-    <p>Zavolejte anebo nám napište... kvalitní komunikace je jeden z pilířů, na kterém stavíme.</p>
+    <p class="center__text__on__pc">Zavolejte anebo nám napište... kvalitní komunikace je jeden z pilířů, na kterém stavíme.</p>
+    <article class="kontakt__grid">
         <div class="contact__icons">
             <a href="tel:+420775550564" class="contacts__description"><span class="icon-dot icon-dot--phone"></span>+420 775 550 564</a>
             <a href="mailto:stavby@hm-building.cz" class="contacts__description"><span class="icon-dot icon-dot--mail"></span>stavby@hm-building.cz</a>
@@ -68,7 +68,7 @@
         </label>
         <input class="button" type="submit" value="Odeslat nezávaznou poptávku">
     </form>
-    </section>
+    </article>
 </main>
 
 </body>
