kdysi strejda google ví všechno. Dneska chatgpt ví všechno a udělá všechno

--- a/404.html
+++ b/404.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <head>
+        <title>404 Error</title>
+        <meta charset="UTF-8">
+        <link href="https://icons8.com/icon/95284/apple" rel="apple-touch-icon">
+        <meta name="destription" content="Jenom 404 Error">
+        <meta name="author" content="Jan Sebastián Kostlán">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="icon" type="image/x-icon" href="Media/logo.png">
+        <link rel="stylesheet" href="styles/navbar.css">
+        <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
+<p class="nadpis__h1__other__page">404 Error</p>
+<p>Náš server nic nenašel. Zkus to znova a lépe</p>
+<div>
+<img src="Media/logo.png">
+</div>
+<button> Ahoj</button>
+
 
 </body>
 </html>
