--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
 
         <article class="article__with__image">
             <aside>
-                <img class="image__left" src="./Media/sluzba-rekonstrukce-1920w.jpg" alt="novostavby">
+                <img srcset="Media/sluzba-rekonstrukce-1920w_mobil.jpg 560w, Media/sluzba-rekonstrukce-1920w.jpg 1920w"
+                     sizes="(max-width: 800px) 100vw, 800px"
+                     class="image__left"
+                     src="./Media/sluzba-rekonstrukce-1920w.jpg"
+                     alt="rekonstrukce">
             </aside>
             <div class="hlavni_obsah">
             <h2>Rekonstrukce domů a jiných staveb</h2>
@@ -95,7 +99,11 @@
         </article>
         <article class="article__with__image reverse">
             <aside>
-                <img class="image__left" src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg" alt="novostavby">
+                <img srcset="Media/sluzba-komunikace-a-zpevnene-plochy-1200w_mobil.jpg 560w, Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg 1920w"
+                     sizes="(max-width: 800px) 100vw, 800px"
+                     class="image__right"
+                     src="./Media/sluzba-komunikace-a-zpevnene-plochy-1200w.jpg"
+                     alt="komunikace">
             </aside>
             <div class="hlavni_obsah">
                 <h2>Komunikace a zpevnění plochy</h2>
