zkouska rychlosti znova

--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
 
             <div class="obrazky__reference">
                 <article class="centrovani__textu">
+                    <div>
                     <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="zbrojnice">
+                    </div>
                     <a href="reference_hasicska_zbrojnice.html" class="overlay">
                         <h3>Hasičská zbrojnice</h3>
                         <p>Celková rekonstrukce</p>
@@ -144,7 +146,9 @@
                 </article>
 
                 <article class="centrovani__textu">
+                    <div>
                     <img src="./Media/reference/reference-pradelna-600w.jpg" alt="prádelna">
+                    </div>
                     <a href="reference_samoobluzna_prace.html" class="overlay">
                         <h3>Samoobslužná prádelna</h3>
                         <p>Celková rekonstrukce</p>
@@ -152,7 +156,9 @@
                 </article>
 
                 <article class="centrovani__textu">
+                    <div>
                     <img src="./Media/reference/reference-plocha-600w.jpg" alt="plochy">
+                    </div>
                     <a href="reference_venkovsni_plochy.html" class="overlay">
                         <h3>Venkovní plochy restyl</h3>
                         <p>Celková rekonstrukce</p>
