nová zkouška rychlosti

--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
             <div class="obrazky__reference">
                 <article class="centrovani__textu">
                     <div>
-                    <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="zbrojnice">
+                        <img srcset="Media/reference/reference-hasicska-zbrojnice-600w_mobil.jpg 560w, Media/reference/reference-hasicska-zbrojnice-600w.jpg 1920w"
+                             sizes="(max-width: 800px) 100vw, 800px"
+                             src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg"
+                             alt="prádelna">
                     </div>
                     <a href="reference_hasicska_zbrojnice.html" class="overlay">
                         <h3>Hasičská zbrojnice</h3>
@@ -147,7 +150,10 @@
 
                 <article class="centrovani__textu">
                     <div>
-                    <img src="./Media/reference/reference-pradelna-600w.jpg" alt="prádelna">
+                        <img srcset="Media/reference/reference-pradelna-600w_mobil.jpg 560w, Media/reference/reference-pradelna-600w.jpg 1920w"
+                             sizes="(max-width: 800px) 100vw, 800px"
+                             src="./Media/reference/reference-pradelna-600w.jpg"
+                             alt="prádelna">
                     </div>
                     <a href="reference_samoobluzna_prace.html" class="overlay">
                         <h3>Samoobslužná prádelna</h3>
@@ -157,7 +163,10 @@
 
                 <article class="centrovani__textu">
                     <div>
-                    <img src="./Media/reference/reference-plocha-600w.jpg" alt="plochy">
+                        <img srcset="Media/reference/reference-plocha-600w_mobil.jpg 560w, Media/reference/reference-plocha-600w.jpg 1920w"
+                             sizes="(max-width: 800px) 100vw, 800px"
+                             src="./Media/reference/reference-plocha-600w.jpg"
+                             alt="plochy">
                     </div>
                     <a href="reference_venkovsni_plochy.html" class="overlay">
                         <h3>Venkovní plochy restyl</h3>
