--- a/reference.html
+++ b/reference.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/computer.css">
 </head>
-</head>
 <body>
 <header class="header__next__page">
     <nav>
@@ -38,41 +37,57 @@
     </nav>
 
 </header>
-<section class="section__reference">
+<main>
+    <section class="section__reference">
 
-    <article class="article__max__width">
-        <h1 class="center__text__on__pc nadpis__h1__other__page">Reference</h1>
-        <p>Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
-    </article>
-
-    <div class="obrazky__reference">
-        <article class="centrovani__textu">
-            <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-            <div class="overlay">
-                <h3>Hasičská zbrojnice</h3>
-                <p>Celková rekonstrukce</p>
-            </div>
-
+        <article class="article__max__width">
+            <p class="velky_a_tucny center__text__on__pc">Rádi vám ukážeme naše reference</p>
+            <p class="center__text__on__pc">Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
         </article>
 
-        <article class="centrovani__textu">
-            <img src="./Media/reference/reference-pradelna-600w.jpg" alt="novostavby">
-            <div class="overlay">
-                <h3>Samoobslužná prádelna</h3>
-                <p>Celková rekonstrukce</p>
-            </div>
-        </article>
+        <div class="obrazky__reference">
+            <article class="centrovani__textu article__reference">
+                <div>
+                    <img srcset="Media/reference/reference-hasicska-zbrojnice-600w_mobil.jpg 560w, Media/reference/reference-hasicska-zbrojnice-600w.jpg 1920w"
+                         sizes="(max-width: 800px) 100vw, 800px"
+                         src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg"
+                         alt="prádelna">
+                </div>
+                <a href="reference_hasicska_zbrojnice.html" class="overlay">
+                    <h3>Hasičská zbrojnice</h3>
+                    <p>Celková rekonstrukce</p>
+                </a>
 
-        <article class="centrovani__textu">
-            <img src="./Media/reference/reference-hasicska-zbrojnice-600w.jpg" alt="novostavby">
-            <div class="overlay">
-                <h3>Venkovní plochy restyl</h3>
-                <p>Celková rekonstrukce</p>
-            </div>
-        </article>
+            </article>
 
-    </div>
-</section>
+            <article class="centrovani__textu article__reference">
+                <div>
+                    <img srcset="Media/reference/reference-pradelna-600w_mobil.jpg 560w, Media/reference/reference-pradelna-600w.jpg 1920w"
+                         sizes="(max-width: 800px) 100vw, 800px"
+                         src="./Media/reference/reference-pradelna-600w.jpg"
+                         alt="prádelna">
+                </div>
+                <a href="reference_samoobluzna_prace.html" class="overlay">
+                    <h3>Samoobslužná prádelna</h3>
+                    <p>Celková rekonstrukce</p>
+                </a>
+            </article>
+
+            <article class="centrovani__textu article__reference">
+                <div>
+                    <img srcset="Media/reference/reference-plocha-600w_mobil.jpg 560w, Media/reference/reference-plocha-600w.jpg 1920w"
+                         sizes="(max-width: 800px) 100vw, 800px"
+                         src="./Media/reference/reference-plocha-600w.jpg"
+                         alt="plochy">
+                </div>
+                <a href="reference_venkovsni_plochy.html" class="overlay">
+                    <h3>Venkovní plochy restyl</h3>
+                    <p>Celková rekonstrukce</p>
+                </a>
+            </article>
+
+        </div>
+    </section>
 
 </main>
 <footer>
