--- a/kontakt.html
+++ b/kontakt.html
@@ -70,6 +70,11 @@
     </form>
     </article>
 </main>
+<footer>
+    <p class="velky_a_tucny">Plácneme si na váš projekt</p>
+    <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
+    <button onclick="window.location.href='kontakt.html';" class="button__footer">Nezávazně poptat</button>
+</footer>
 
 </body>
 </html>
