já chci umřít. Proč jsem to dělal na poslední chvíli

--- a/kontakt.html
+++ b/kontakt.html
@@ -37,32 +37,34 @@
 
 <main>
         <h1 class="center__text__on__pc nadpis__h1__other__page">Kontakt</h1>
-    <p class="center__text__on__pc">Zavolejte anebo nám napište... kvalitní komunikace je jeden z pilířů, na kterém stavíme.</p>
+    <p class="center__text__on__pc max__text__align">Zavolejte anebo nám napište... kvalitní komunikace je jeden z pilířů, na kterém stavíme.</p>
     <article class="kontakt__grid">
         <div class="contact__icons">
             <a href="tel:+420775550564" class="contacts__description"><span class="icon-dot icon-dot--phone"></span>+420 775 550 564</a>
             <a href="mailto:stavby@hm-building.cz" class="contacts__description"><span class="icon-dot icon-dot--mail"></span>stavby@hm-building.cz</a>
             <a href="https://en.mapy.cz/s/hacahelupa" class="contacts__description"><span class="icon-dot icon-dot--position"></span>Křižanská 12, Liberec XXII-Horní Suchá</a>
         </div>
-    <div class="map">
-    <img src="Media/mapa.jpg" alt="mapa">
-    </div>
+
+        <figure>
+            <a href="http://en.mapy.cz/s/hacehelupa">
+            <img src="Media/mapa.jpg" alt="mapa">
+            </a>
+        </figure>
     <form>
-        <p>Nezávazná poptávka služeb</p>
-        <p>Plácneme si pro Váš projekt? Nezávazně nás kontaktujte a domluvme vše potřebné.
-        </p>
-        <label for="fname">Jméno a příjmení:</label><br>
-        <input type="text" id="fname" name="fname"><br>
-        <label for="hovno">E-mail:</label><br>
-        <input type="text" id="hovno" name="fname"><br>
-        <label for="telefon">Telefon:</label><br>
-        <input type="text" id="telefon" name="fname"><br>
-        <label for="category">Kategorie:</label><br>
+        <p class="velky_a_tucny">Nezávazná poptávka služeb</p>
+        <p>Plácneme si pro Váš projekt? Nezávazně nás kontaktujte a domluvme vše potřebné.</p>
+        <label for="fname">Jméno a příjmení:</label>
+        <input type="text" id="fname" name="fname">
+        <label for="hovno">E-mail:</label>
+        <input type="text" id="hovno" name="fname">
+        <label for="telefon">Telefon:</label>
+        <input type="text" id="telefon" name="fname">
+        <label for="category">Kategorie:</label>
         <select id="category" name="category">
             <option value="gulag">Psychologie</option>
             <option value="Ozzy je powerlifter">Ozzy</option>
             <option value="Kryčfalušij">Hanička Zagorova</option>
-        </select><br>
+        </select>
         <label>
             <textarea  name="message" rows="10" cols="30">Preferuji brunety oproti blondýnám</textarea>
         </label>
