--- a/reference_hasicska_zbrojnice.html
+++ b/reference_hasicska_zbrojnice.html
@@ -33,11 +33,11 @@
     </nav>
 
 </header>
-<figure class="article__title">
+<main>
+    <article>
     <h1 class="center__text__on__pc nadpis__h1__other__page">Hasičská zbrojnice</h1>
     <p class="center__text__on__pc">Celková rekonstrukce hasičské zbrojnice v Rynolticích.</p>
-</figure>
-    <section class="article--reference">
+    <figure class="article--reference">
         <img src="Media/reference/hasicska-zbrojnice/reference-hz-01.jpeg">
         <img src="Media/reference/hasicska-zbrojnice/reference-hz-02.jpeg">
         <img src="Media/reference/hasicska-zbrojnice/reference-hz-03.jpeg">
@@ -56,7 +56,9 @@
         <img src="Media//reference/hasicska-zbrojnice/reference-hz-17.jpeg">
         <img src="Media//reference/hasicska-zbrojnice/reference-hz-18.jpeg">
         <img src="Media//reference/hasicska-zbrojnice/reference-hz-last.jpeg">
-    </section>
+    <figure/>
+    </article>
+</main>
 <footer>
     <p>Plácneme si na váš projekt</p>
     <p>Nezavázně nás kontaktujte a domluvíme vše potřebné</p>
