--- a/sluzba_novostavby.html
+++ b/sluzba_novostavby.html
@@ -35,8 +35,8 @@
 <main>
     <section>
     <article>
-        <h1>Novostavby</h1>
-        <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci. Provádíme stavby jak průmyslového typu, tak rodinné stavby. Stavba je prováděna dle projektové dokumentace dodané investorem
+        <h1 class="center__text__on__pc nadpis__h1__other__page">Novostavby</h1>
+        <p>Dle požadavků investora jsme schopní dodat <b>kompletní stavbu na klíč</b>, případně zhotovit ucelenou část. Jsme schopni zajistit také <b>projektovou dokumentaci</b>. Provádíme <b>stavby jak průmyslového typu</b>, tak <b>rodinné stavby</b>. Stavba je prováděna dle projektové dokumentace dodané investorem
             a v rozsahu dle smlouvy o dílo, která obsahuje jasně definované ceny dle položkového rozpočtu.</p>
         <ul class="odrazky__oranzove">
             <li>zemní práce</li>
