--- a/sluzba_prumyslove_stavby.html
+++ b/sluzba_prumyslove_stavby.html
@@ -35,8 +35,8 @@
 <main>
     <section>
     <article>
-        <h1>Průmyslové stavby</h1>
-        <p>Realizujeme průmyslové objekty ocelové konstrukce, lehké ocelové (stanového typu), z prefabrikovaných dílců atd. Vzhledem k tomu, že vlastníme dostatek vlastní mechanizace, stáváme se nezávislými na ostatních subdodávkách a tím se dostáváme na přijatelné ceny.</p>
+        <h1 class="center__text__on__pc nadpis__h1__other__page">Průmyslové stavby</h1>
+        <p>Realizujeme <b>průmyslové objekty ocelové konstrukce, lehké ocelové (stanového typu)</b>, z prefabrikovaných dílců atd. Vzhledem k tomu, že vlastníme dostatek vlastní mechanizace, stáváme se nezávislými na ostatních subdodávkách a tím se <b>dostáváme na přijatelné ceny</b>.</p>
         <ul class="odrazky__oranzove">
             <li>zemní práce</li>
             <li>základové konstrukce</li>
