--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 </div>
             </label>
             <menu>
-                <li class="li__active"><a class="a__active" href="index.html">Domů</a></li>
-                <li><a href=#sluzby>Služby</a></li>
-                <li><a href="reference.html">Reference </a></li>
-                <li><a href="o_nas.html">O nás</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
+                <li class="li__active"><a class="a__active" href="index.html">DOMŮ</a></li>
+                <li><a href=#sluzby>SLUŽBY</a></li>
+                <li><a href="reference.html">REFERENCE</a></li>
+                <li><a href="o_nas.html">O NÁS</a></li>
+                <li><a href="kontakt.html">KONTAKT</a></li>
             </menu>
         </nav>
         <div class="header__items">
@@ -45,7 +45,7 @@
         <section id="sluzby">
         <article class="article__max__width">
             <p class="velky_a_tucny center__text__on__pc">Využíjte škálu našich <span class="span__orange">služeb</span></p>
-            <p class="center__text__on__pc">Ačkoliv provádíme především průmyslové stavby, není pro nás problém postavit Vám rodinný domek na klíč, nebo jen hrubou stavbu. Nejsou nám cizí ani rekonstrukce budov a jejich údržba a to včetně okolních ploch.</p>
+            <p class="center__text__on__pc max__text__align">Ačkoliv provádíme především <b>průmyslové stavby</b>, není pro nás problém postavit Vám <b>rodinný domek na klíč</b>, nebo jen hrubou stavbu. Nejsou nám cizí ani <b>rekonstrukce budov</b> a jejich údržba a to včetně okolních ploch.</p>
         </article>
 
 
@@ -61,7 +61,7 @@
             </aside>
             <div class="hlavni_obsah">
             <h2>Novostavby</h2>
-            <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci.</p>
+            <p>Dle požadavků investora jsme schopní dodat <b>kompletní stavbu na klíč</b>, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci.</p>
             <p> Provádíme stavby jak průmysloého typu, tak rodinné stavby.</p>
                 <button onclick="window.location.href='sluzba_novostavby.html';" class="button__outline">Zobrazit více</button>
             </div>
@@ -77,8 +77,7 @@
             </aside>
             <div class="hlavni_obsah">
                 <h2>Průmyslové stavby</h2>
-                <p>Dle požadavků investora jsme schopní dodat kompletní stavbu na klíč, případně zhotovit ucelenou část. Jsme schopni zajistit také projektovou dokumentaci. </p>
-                <p>Provádíme stavby jak průmyslového typu, tak rodinné stavby.</p>
+                <p>Realizujeme <b>průmyslové objekty ocelové konstrukce</b>, lehké ocelové (stanového typu), z prefabrikovaných dílců atd. Vzhledem k tomu, že vlastníme dostatek vlastní mechanizace, stáváme se nezávislými na ostatních subdodávkách a tím se <b>dostáváme na přijatelné ceny</b>.</p>
                  <button onclick="window.location.href='sluzba_prumyslove_stavby.html';" class="button__outline">Zobrazit více</button>
             </div>
 
@@ -95,7 +94,7 @@
             </aside>
             <div class="hlavni_obsah">
             <h2>Rekonstrukce domů a jiných staveb</h2>
-            <p>Provádíme veškeré práce spojené s rekonstrukcí stávajících objektů. Pro naše klienty zajišťujeme dodatečné izolování objektů, zateplení objektů, změnu vnitřních i vnějších dispozic stávajících objektů a demolice stávajících staveb.</p>
+            <p>Provádíme veškeré práce spojené s <b>rekonstrukcí stávajících objektů</b>. Pro naše klienty zajišťujeme dodatečné izolování objektů, <b>zateplení objektů</b>, změnu vnitřních i vnějších dispozic stávajících objektů a demolice stávajících staveb.</p>
                 <button onclick="window.location.href='sluzba_rekonstrukce.html';" class="button__outline">Zobrazit více</button>
                 </div>
 
@@ -110,7 +109,7 @@
             </aside>
             <div class="hlavni_obsah">
                 <h2>Komunikace a zpevnění plochy</h2>
-                <p>Komunikace a zpevněné plochy provádíme včetně zemních prací, konstrukcí podkladních a souvisejících objektů, jako jsou odvodnění, zpevnění svahů, opěrné zdi atd.</p>
+                <p>Komunikace a zpevněné plochy provádíme včetně <b>zemních prací, konstrukcí podkladních</b> a souvisejících objektů, jako jsou <b>odvodnění, zpevnění svahů, opěrné zdi</b> atd.</p>
                 <button onclick="window.location.href='sluzba_komunikace.html';" class="button__outline">Zobrazit více</button>
             </div>
 
@@ -132,8 +131,8 @@
         <section class="section__reference">
 
             <article class="article__max__width">
-                <p class="velky_a_tucny center__text__on__pc">Rádi vám ukážeme naše reference</p>
-                <p class="center__text__on__pc">Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
+                <p class="velky_a_tucny center__text__on__pc">Rádi vám ukážeme naše <span class="span__orange">reference</span></p>
+                <p class="center__text__on__pc">Stojí za námi <b>kvalitně vyhotovené zakázky</b> dle konkrétních požadavků zadavatelů <b>podepřené letitými zkušenostmi ve stavebnictví</b>. To, že <b>obrátit se na právě nás je vhodná volba potvrdí naši klienti</b>, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
             </article>
 
             <div class="obrazky__reference">
@@ -145,7 +144,7 @@
                              alt="prádelna">
                     </div>
                     <a href="reference_hasicska_zbrojnice.html" class="overlay">
-                        <p>Hasičská zbrojnice</p>
+                        <p class="velky_a_tucny">Hasičská zbrojnice</p>
                         <p>Celková rekonstrukce</p>
                     </a>
 
@@ -159,7 +158,7 @@
                              alt="prádelna">
                     </div>
                     <a href="reference_samoobluzna_prace.html" class="overlay">
-                        <p>Samoobslužná prádelna</p>
+                        <p class="velky_a_tucny">Samoobslužná prádelna</p>
                         <p>Celková rekonstrukce</p>
                     </a>
                 </article>
@@ -172,11 +171,13 @@
                              alt="plochy">
                     </div>
                     <a href="reference_venkovsni_plochy.html" class="overlay">
-                        <p>Venkovní plochy restyl</p>
+                        <p class="velky_a_tucny">Venkovní plochy restyl</p>
                         <p>Celková rekonstrukce</p>
                     </a>
                 </article>
-
+            </div>
+            <div class="centrovani__elementu">
+                <button onclick="window.location.href='reference.html';" class="button__normal">Více referencí</button>
             </div>
         </section>
 
