--- a/o_nas.html
+++ b/o_nas.html
@@ -38,19 +38,19 @@
     <section>
     <article>
         <h1 class="center__text__on__pc nadpis__h1__other__page">O nás</h1>
-    <p>Společnost HM Building.cz s.r.o. nabízí své služby ve stavebnictví od roku 2015, a to převážně po Libereckém kraji. </p>
-    <p> V oboru pozemního stavitelství provádíme stavbu a rekonstrukci:</p>
+        <p>Společnost <b>HM Building.cz s.r.o.</b> nabízí své <b>služby ve stavebnictví od roku 2015</b>, a to převážně po Libereckém kraji. </p>
+    <p> V oboru pozemního stavitelství <b>provádíme stavbu a rekonstrukci:</b></p>
     <ul class="odrazky__oranzove">
         <li>Průmyslových staveb</li>
         <li>obytných staveb</li>
         <li>staveb občanské vybavenosti</li>
         <li>komunikaci vozidlovýých, ale i pěších</li>
     </ul>
-    <p>Zakázky můžeme řešit tzv. na klíč, kde jsme schopni zajistit dodávky a montáž elektro-instalace NN a VN, zdravotně – technické instalace, ústředního vytápění, vzduchotechniky, MaR, případně jsme schopni, po dohodě s investorem, dodat pouze některou ucelenou část celkové zakázky.</p>
+    <p>Zakázky můžeme řešit tzv. <b>na klíč</b>, kde jsme schopni zajistit dodávky a montáž elektro-instalace NN a VN, zdravotně – technické instalace, ústředního vytápění, vzduchotechniky, MaR, případně jsme schopni, po dohodě s investorem, dodat pouze některou ucelenou část celkové zakázky.</p>
 
-        <p>Naše firma taktéž zajišťuje projekční služby a služby týkající se statického posouzení staveb v oboru pozemního stavitelství a dále jsme schopni zajistit investorsko–inženýrské služby.</p>
+        <p>Naše firma taktéž zajišťuje <b>projekční služby a služby týkající se statického posouzení staveb</b> v oboru pozemního stavitelství a dále jsme schopni zajistit <b>investorsko–inženýrské služby</b>.</p>
 
-        <p>Záruční doba na námi provedená díla se pohybuje od 24 do 60 měsíců.</p>
+        <p><b>Záruční doba</b> na námi provedená díla se pohybuje od 24 do 60 měsíců.</p>
     </article>
     </section>
 </main>
