--- a/reference.html
+++ b/reference.html
@@ -39,11 +39,8 @@
 </header>
 <main>
     <section class="section__reference">
-
-        <article class="article__max__width">
-            <p class="velky_a_tucny center__text__on__pc">Rádi vám ukážeme naše reference</p>
-            <p class="center__text__on__pc">Stojí za námi kvalitně vyhotovené zakázky dle konkrétních požadavků zadavatelů podepřené letitými zkušenostmi ve stavebnictví. To, že obrátit se na právě nás je vhodná volba potvrdí naši klienti, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
-        </article>
+        <h1 class="center__text__on__pc nadpis__h1__other__page">Reference</h1>
+        <p class="center__text__on__pc max__text__align">Stojí za námi <b>kvalitně vyhotovené zakázky</b> dle konkrétních požadavků zadavatelů <b>podepřené letitými zkušenostmi ve stavebnictví</b>. To, že <b>obrátit se na právě nás je vhodná volba potvrdí naši klienti</b>, na jejichž stavbách jsme zanechali náš rukopis. Reference jsou jen zlomkem naší práce, za kterou se rozhodně nestydíme.</p>
 
         <div class="obrazky__reference">
             <article class="centrovani__textu article__reference">
