--- a/sluzba_komunikace.html
+++ b/sluzba_komunikace.html
@@ -40,14 +40,14 @@
     <section>
     <article>
         <h1>Komunikace a zpevněné plochy</h1>
-        <p>Komunikace a zpevněné plochy provádíme včetně zemních prací, konstrukcí podkladních a souvisejících objektů, jako jsou odvodnění, zpevnění svahů, opěrné zdi atd.</p>
-        <p>Kryt komunikace</p>
+        <p>Komunikace a zpevněné plochy provádíme <b>včetně zemních prací, konstrukcí podkladních</b> a souvisejících objektů, jako jsou <b>odvodnění, zpevnění svahů, opěrné zdi </b>atd.</p>
+        <b>Kryt komunikace</b>
         <ul class="odrazky__oranzove">
             <li>živočisných</li>
             <li>betonový</li>
             <li>dlážděný (kámen, betonová dlažba...)</li>
         </ul>
-        <p>Při realizaci jakékoliv zpevněné plochy dokážeme navrhnout celkovou skladbu konstrukce, s ohledem na její způsob použití a umístění.</p>
+        <p>Při realizaci jakékoliv zpevněné plochy <b>dokážeme navrhnout celkovou skladbu konstrukce</b>, s ohledem na její způsob použití a umístění.</p>
         <ul class="odrazky__oranzove">
             <li>zemní práce</li>
             <li>podklady pod komunikace</li>
