--- a/sluzba_rekonstrukce.html
+++ b/sluzba_rekonstrukce.html
@@ -37,23 +37,23 @@
     <article>
         <h1>Rekonstrukce domů</h1>
         <p>Provádíme veškeré práce spojené s rekonstrukcí stávajících objektů.</p>
-        <p>Dodatečné izolování objektů</p>
+        <b>Dodatečné izolování objektů</b>
         <ul class="odrazky__oranzove">
             <li>zemní práce</li>
             <li>základové konstrukce</li>
         </ul>
-        <p>Zateplení objektů</p>
+        <b>Zateplení objektů</b>
         <ul class="odrazky__oranzove">
             <li>zatelení fasád</li>
             <li>výměna oken a otvorových výplní</li>
         </ul>
-        <p>Změna vnitřních i vnějších dispozic stávajících objektů</p>
+        <b>Změna vnitřních i vnějších dispozic stávajících objektů</b>
         <ul class="odrazky__oranzove">
             <li>bourací práce</li>
             <li>zednické práce</li>
             <li>sádrokartonářské práce</li>
         </ul>
-        <p>Demolice stávajících objektů</p>
+        <b>Demolice stávajících objektů</b>
         <ul class="odrazky__oranzove">
             <li>bourací a demoliční práce</li>
             <li>Odizolování konstrukcí pod/nad úrovní terénu</li>
