--- a/o_nas.html
+++ b/o_nas.html
@@ -9,31 +9,31 @@
     <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
-<header class="header__next__page">
-    <nav>
-        <div class="logo">
-            <a href="./index.html">
-                <img src="./Media/logo.png" alt="Logo">
-            </a>
-        </div>
-        <input id="menu-toggle" type="checkbox" />
-        <label class='menu-button-container' for="menu-toggle">
-            <div class='menu-button'>
-                <p>menu</p>
+    <header class="header__next__page">
+        <nav>
+            <div class="logo">
+                <a href="./index.html">
+                    <img src="./Media/logo.png" alt="Logo">
+                </a>
             </div>
-        </label>
+            <input id="menu-toggle" type="checkbox" />
+            <label class='menu-button-container' for="menu-toggle">
+                <div class='menu-button'>
+                    <p>menu</p>
+                </div>
+            </label>
 
-        <menu>
-            <li><a href="index.html">Domů</a></li>
-            <li><a href="index.html">Služby</a></li>
-            <li><a href="reference.html">Reference </a></li>
-            <li class="li__active"><a class="a__active" href="o_nas.html">O nás</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-        </menu>
-    </nav>
+            <menu>
+                <li><a href="index.html">DOMŮ</a></li>
+                <li><a href="index.html">SLUŽBY</a></li>
+                <li><a href="reference.html">REFERENCE</a></li>
+                <li class="li__active"><a class="a__active" href="o_nas.html">O NÁS</a></li>
+                <li><a href="kontakt.html">KONTAKT</a></li>
+            </menu>
+        </nav>
 
 
-</header>
+    </header>
 <main>
     <section>
     <article>
