--- a/404.html
+++ b/404.html
@@ -14,12 +14,36 @@
         <link rel="stylesheet" href="styles/computer.css">
 </head>
 <body>
+<header class="header__next__page">
+    <nav>
+        <div class="logo">
+            <a href="./index.html">
+                <img src="./Media/logo.png" alt="Logo">
+            </a>
+        </div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'>
+                <p>menu</p>
+            </div>
+        </label>
+
+        <menu>
+            <li><a href="index.html">DOMŮ</a></li>
+            <li><a href="index.html">SLUŽBY</a></li>
+            <li><a href="reference.html">REFERENCE</a></li>
+            <li><a href="o_nas.html">O NÁS</a></li>
+            <li><a href="kontakt.html">KONTAKT</a></li>
+        </menu>
+    </nav>
+
+
+</header>
+<article>
 <p class="nadpis__h1__other__page">404 Error</p>
 <p>Náš server nic nenašel. Zkus to znova a lépe</p>
-<div>
-<img src="Media/logo.png">
-</div>
-<button> Ahoj</button>
+<button onclick="window.location.href='index.html';" class="button__normal">Hlavní stránka</button>
+</article>
 
 
 </body>
